--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  user-select: none;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
